non-compatible/tests/ecc-aws-131-instance_with_unencrypted_service_is_exposed_to_public_internet/placebo-green/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "Managed by Terraform",
                "GroupName": "131_c7n_security_group2_green",
                "IpPermissions": [
                    {
                        "FromPort": 11211,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.0.0/16"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 11211,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "this",
                "GroupId": "sg-01c7d3d00907c27df",
                "IpPermissionsEgress": [],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "131_c7n_security_group2_green"
                    }
                ],
                "VpcId": "vpc-00633271f367e6e44"
            },
            {
                "Description": "Managed by Terraform",
                "GroupName": "131_c7n_security_group1_green",
                "IpPermissions": [
                    {
                        "FromPort": 80,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 80,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 9300,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.0.0/16"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 9300,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 9200,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.0.0/16"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 9200,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "this",
                "GroupId": "sg-06742323845b489ff",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "131_c7n_security_group1_green"
                    }
                ],
                "VpcId": "vpc-00633271f367e6e44"
            }
        ],
        "ResponseMetadata": {}
    }
}
